--- a/nextflow.config
+++ b/nextflow.config
@@ -1,10 +1,7 @@
 //docker.enabled=true
 params{
 	//Global parameters
-	single_end=false
-
-	//mclparameters
-	////////////Clustering parameters
+	plamsmid_threshold=0.7
 	//mcl parameters
 	inflation=2
 	//mash parameters
