restructure workflow merge contigs after plasmid extraction

--- a/nextflow.config
+++ b/nextflow.config
@@ -7,7 +7,9 @@ params{
 	//mash parameters
 	mashdistance=0.05
 	mashcores=4
-
+	//RUN ARG pipeline
+	runARG=true
+	
 	/////////
 	//abundance parametetrs
 	bwtcores=6
