add skip arg parameter

--- a/nextflow.config
+++ b/nextflow.config
@@ -8,7 +8,7 @@ params{
 	mashdistance=0.05
 	mashcores=4
 	//RUN ARG pipeline
-	runARG=true
+	skip_ARG=false
 	
 	/////////
 	//abundance parametetrs
