add param run plasmid prediction

--- a/nextflow.config
+++ b/nextflow.config
@@ -9,6 +9,8 @@ params{
 	mashcores=4
 	//RUN ARG pipeline
 	skip_ARG=false
+	//RUN Plasmid pipeline
+	run_plasmid_prediction=true
 	
 	/////////
 	//abundance parametetrs
