add bind container option in deep arg process

--- a/nextflow.config
+++ b/nextflow.config
@@ -11,7 +11,8 @@ params{
 	skip_ARG=false
 	//RUN Plasmid pipeline
 	run_plasmid_prediction=true
-	
+	//User home
+	user_home="$HOME"
 	/////////
 	//abundance parametetrs
 	bwtcores=6
