ass path to deepargdb

--- a/nextflow.config
+++ b/nextflow.config
@@ -16,6 +16,8 @@ params{
 	/////////
 	//abundance parametetrs
 	bwtcores=6
+	///deepARG parameters set to home
+	deeparg_db= "$HOME/deeparg_db"
 	}
 
 	env {
