Add hmm recombinase and gene catalog function

--- a/nextflow.config
+++ b/nextflow.config
@@ -2,23 +2,32 @@
 params{
 	//Global parameters
 	plamsmid_threshold=0.7
+
+	/////CONTIG DERREPLICATION PARAMETERS
 	//mcl parameters
 	inflation=2
 	//mash parameters
 	mashdistance=0.05
 	mashcores=4
+
+	/////WORKFLOW STEPS PARAMETERS
 	//RUN ARG pipeline
 	skip_ARG=false
 	//RUN Plasmid pipeline
 	run_plasmid_prediction=true
+	//RUN Gene catalogue from contigs
+	run_gene_catalogue=false
+	//run hmm recombinase MGE
+	run_hmmMGE=false
+
+	/////BIND PATHS FOR SINGULARITY RUN
 	//User home
 	user_home="$HOME"
 	/////////
-	//abundance parametetrs
-	bwtcores=6
 	///deepARG parameters set to home
 	deeparg_db= "$HOME/deeparg_db"
 	deeparg_identity = 30
+	//
 	}
 
 	env {
@@ -30,8 +39,9 @@ params{
 	manifest{
   	name='nf-plasx'
   	author='Jose Garcia'
-  	homePage="github/garciafertson/nf_BGC"
+  	homePage="github/garciafertson/nf-plasx"
   	description="pipeline for Plasmid Prediction and ARG annotation in metagenome assemblies"
   	mainScript="main.nf"
   	version="0.1"
 	}
+
