next config set run parameters

--- a/nextflow.config
+++ b/nextflow.config
@@ -15,10 +15,10 @@ params{
 	skip_ARG=false
 	//RUN Plasmid pipeline
 	run_plasmid_prediction=true
+	//run hmm recombinase MGE
+	run_MGEhmmsearch=true
 	//RUN Gene catalogue from contigs
 	run_gene_catalogue=false
-	//run hmm recombinase MGE
-	run_hmmMGE=false
 
 	/////BIND PATHS FOR SINGULARITY RUN
 	//User home
