mge arg annotation tables and outputs

--- a/nextflow.config
+++ b/nextflow.config
@@ -11,12 +11,11 @@ params{
 	mashcores=4
 
 	/////WORKFLOW STEPS PARAMETERS
-	//RUN Plasmid pipeline
-	run_plasmid_prediction=true
-	//run hmm recombinase MGE
-	run_MGEhmmsearch=true
-	//RUN ARG pipeline
-	skip_ARG = false
+	//RUN MGE prediction
+	run_mge_prediction=true
+	//run ARG prediction
+	run_ARG_prediction=true
+
 	//RUN Gene catalogue from contigs
 	run_gene_catalogue=false
 
@@ -37,10 +36,10 @@ params{
 	}
 
 	manifest{
-  	name='nf-plasx'
+  	name='nf-mar'
   	author='Jose Garcia'
   	homePage="github/garciafertson/nf-plasx"
-  	description="pipeline for Plasmid Prediction and ARG annotation in metagenome assemblies"
+  	description="pipeline for MGE and ARG prediction in metagenome assemblies"
   	mainScript="main.nf"
   	version="0.1"
 	}
